# openvpn_manager

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.test.yml  docker-compose.yml  man_openvpn.txt
backend/: .dockerignore  CLAUDE.md  Dockerfile  alembic.ini  entrypoint.sh  generate_test_keys.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_easyrsa_server_id.py  0003_add_pki_dir.py  0004_add_easyrsa_use_sudo.py  0005_add_tls_auth_key.py  0006_add_user_role.py  0007_add_sudo_password.py  0008_add_pam_users_groups.py  0009_add_ca_passphrase_to_vpn_instance.py  0010_add_server_use_sudo.py  0011_add_enforce_cn_username.py  0012_add_ldap_support.py  0013_add_user_roles_table.py  0014_add_user_role_source.py  0015_change_user_role_default.py  0016_add_client_cert_unique_constraints.py
backend/app/: cli.py  config.py  dependencies.py  main.py  version.py
backend/app/core/: exceptions.py  logging.py  rate_limit.py  security.py
backend/app/db/: base.py  session.py  utils.py
backend/app/routers/: auth.py  backup.py  certificates.py  clients.py  deploy.py  easyrsa.py  ldap.py  pam.py  routes.py  servers.py  system.py  users.py  vpn_instances.py
backend/app/schemas/: auth.py  backup.py  certificate.py  easyrsa.py  ldap.py  pam.py  route.py  server.py  system.py  user_management.py  vpn_client.py  vpn_instance.py
backend/app/services/: audit_service.py  auth_service.py  backup_service.py  client_generator.py  cn_verify_service.py  config_parser.py  deploy_service.py  easyrsa_service.py  ldap_auth_plugin.py  ldap_service.py  ldap_sync_service.py  openvpn_directives.py  pam_service.py  route_manager.py  (+2 more)
(+103 files in other folders)
