[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openvpn-manager"
version = "0.1.0"
description = "OpenVPN server management web application"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "pydantic[email]>=2.10.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "alembic>=1.14.0,<2.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "bcrypt>=4.0.0,<6.0.0",
    "asyncssh>=2.18.0,<3.0.0",
    "cryptography>=43.0.0,<47.0.0",
    "structlog>=24.4.0,<26.0.0",
    "python-multipart>=0.0.12,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "ldap3>=2.9.1,<3.0.0",
    "slowapi>=0.1.9,<1.0.0",
    "redis>=5.0.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "factory-boy>=3.3.1",
    "anyio>=4.7.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
ovpn-create-admin = "app.cli:create_admin"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
addopts = "--cov=app --cov-report=term-missing --cov-report=html"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "RUF"]
ignore = ["S101", "S603", "S607"]  # assert in tests, subprocess with list args

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
